# pfeffel

./: .gitignore  .pre-commit-config.yaml  README.md  WIP_high_level.ipynb  config.yaml  folium-timestamped-geojson.ipynb  high_level.ipynb  pyproject.toml  visualise_bike_story.ipynb  visualise_bike_story.py
TDS/: Boris-Bikes-TDS.ipynb
data/: bike_data_urls.txt  stations_loc.json
src/: Animate.py  bike.py  clean_data.py  create_story.py  network.py  network_analysis.py  quantify_bike_movement.py  story.py  trip.py  utils.py  visualise_bike_story.py
src/pfeffel/: download  download.py
test/: test_quantify_bike_movement.py  test_trip.py
test/data/: stations_loc.json
