[tool.poetry]
name = "pfeffel"
version = "0.1.0"
description = ""
authors = ["The Pfeffel team "]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"